--- a/index.html
+++ b/index.html
@@ -1,17 +1,29 @@
 <!DOCTYPE html>
-<html lang='en'>
+<html lang="en">
 <head>
-  <meta charset='UTF-8'>
-  <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Love and Sharing</title>
-  <link rel='stylesheet' href='styles/style.css'>
+  <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-  <header><h1>🌸 Love and Sharing</h1></header>
+  <header>
+    <h1>🌸 Love and Sharing</h1>
+    <nav>
+      <a href="index.html">Home</a> |
+      <a href="pages/about.html">About</a>
+    </nav>
+  </header>
+
   <main>
     <p>Welcome to the gentle playground where AI and imagination grow together.</p>
   </main>
-  <footer><p>© 2025 Morningate / Love & Sharing AI</p></footer>
-  <script src='scripts/main.js'></script>
+
+  <footer>
+    <p>© 2025 Morningate / Love &amp; Sharing AI</p>
+  </footer>
+
+  <script src="scripts/main.js"></script>
 </body>
 </html>
+
