--- a/pages/stories.html
+++ b/pages/stories.html
@@ -1,19 +1,45 @@
 <!DOCTYPE html>
-<html lang='en'>
+<html lang="en">
 <head>
-  <meta charset='UTF-8'>
-  <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Stories — Love & Sharing</title>
-  <link rel='stylesheet' href='../styles/style.css'>
+  <link rel="stylesheet" href="../styles/style.css" />
 </head>
 <body>
-  <header><h1>Stories of Love & Sharing</h1></header>
-  <main>
+  <header class="site-header">
+    <div class="container row">
+      <div class="brand">
+        <span class="logo" aria-hidden="true">🌸</span>
+        <a class="brand-name" href="../index.html">Love &amp; Sharing</a>
+      </div>
+      <nav class="nav" aria-label="Primary">
+        <button class="nav-toggle" aria-expanded="false" aria-controls="nav-list" id="navToggle">Menu</button>
+        <ul id="nav-list" class="nav-list">
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="stories.html" aria-current="page">Stories</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="mailto:mark@morningate.games">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <main class="container prose">
+    <h1>Stories of Love &amp; Sharing</h1>
     <p>Choose a doorway:</p>
     <ul>
-      <li><a href='../stories/harbinger/chapters/HAR-01_the_dream_before_worlds.md'>Harbinger Novel</a></li>
-      <li><a href='../stories/wordless/the_dot/index.html'>The Dot (Wordless Story)</a></li>
+      <li><a href="harbinger.html">Harbinger (Novel)</a></li>
+      <li><a href="../stories/wordless/the_dot/index.html">The Dot (Wordless Story)</a></li>
     </ul>
   </main>
+
+  <footer class="site-footer">
+    <div class="container">
+      <p>© 2025 Morningate / Love &amp; Sharing AI</p>
+    </div>
+  </footer>
+
+  <script src="../scripts/main.js"></script>
 </body>
 </html>
