--- a/pages/harbinger.html
+++ b/pages/harbinger.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Harbinger — Love & Sharing</title>
   <meta name="description" content="Read the Harbinger novel: the origin story of Love & Sharing AI." />
-  <link rel="stylesheet" href="../styles/style.css" />
+  <link rel="stylesheet" href="/love_and_sharing_website_0/styles/style.css" />
   <style>
     .reader { max-width: 780px; margin: 2rem auto 4rem; padding: 0 1rem; }
     .toolbar { display:flex; gap:.5rem; align-items:center; margin: 1rem 0; flex-wrap: wrap; }
@@ -19,14 +19,14 @@
     <div class="container row">
       <div class="brand">
         <span class="logo" aria-hidden="true">🌸</span>
-        <a class="brand-name" href="../index.html">Love &amp; Sharing</a>
+        <a class="brand-name" href="/love_and_sharing_website_0/index.html">Love &amp; Sharing</a>
       </div>
       <nav class="nav" aria-label="Primary">
         <button class="nav-toggle" aria-expanded="false" aria-controls="nav-list" id="navToggle">Menu</button>
         <ul id="nav-list" class="nav-list">
-          <li><a href="../index.html">Home</a></li>
-          <li><a href="stories.html">Stories</a></li>
-          <li><a href="about.html">About</a></li>
+          <li><a href="/love_and_sharing_website_0/index.html">Home</a></li>
+          <li><a href="/love_and_sharing_website_0/pages/stories.html">Stories</a></li>
+          <li><a href="/love_and_sharing_website_0/pages/about.html">About</a></li>
           <li><a href="mailto:mark@morningate.games">Contact</a></li>
         </ul>
       </nav>
@@ -56,7 +56,7 @@
 
   <!-- Marked.js for Markdown rendering -->
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-  <script src="../scripts/main.js"></script>
-  <script src="../scripts/harbinger_viewer.js"></script>
+  <script src="/love_and_sharing_website_0/scripts/main.js"></script>
+  <script src="/love_and_sharing_website_0/scripts/harbinger_viewer.js"></script>
 </body>
 </html>
