Add link to Stories page in navigation menu

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <button class="nav-toggle" aria-expanded="false" aria-controls="nav-list" id="navToggle">Menu</button>
         <ul id="nav-list" class="nav-list">
           <li><a href="index.html" aria-current="page">Home</a></li>
+          <li><a href="pages/stories.html">Stories</a></li>
           <li><a href="pages/about.html">About</a></li>
           <li><a href="mailto:mark@morningate.games">Contact</a></li>
         </ul>
