Enhance index.html and The Dot (Intro) page: add featured experiences section and update title and header for clarity

--- a/index.html
+++ b/index.html
@@ -46,13 +46,23 @@
 
     <section class="cards container">
       <article class="card">
+        <h2>Featured Experiences</h2>
+        <ul>
+          <li><a href="stories/wordless/the_dot/index.html">🌈 The Dot (Intro)</a></li>
+          <li><a href="stories/wordless/template_storybook/index.html">📖 Template Storybook</a></li>
+        </ul>
+      </article>
+
+      <article class="card">
         <h2>Gentle by design</h2>
         <p>Small, kind, and remixable: each artefact invites exploration without pressure.</p>
       </article>
+
       <article class="card">
         <h2>Made to be shared</h2>
         <p>Play sparks growth. We document, zip, and share—so others can build along.</p>
       </article>
+
       <article class="card">
         <h2>Growing together</h2>
         <p>Children, parents, and AI companions learn side-by-side in playful micro-worlds.</p>
