--- a/stories/wordless/the_dot/index.html
+++ b/stories/wordless/the_dot/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>The Dot — Love & Sharing</title>
+  <title>The Dot (Intro) — Love & Sharing</title>
   <link rel="stylesheet" href="styles/style.css" />
   <meta name="description" content="A gentle breathing dot. Click to comfort it.">
 </head>
 <body>
   <main class="wrap">
     <header class="topbar">
-      <h1>The Dot</h1>
+      <h1>The Dot (Intro)</h1>
       <div class="hint">Click / Tap to comfort • Space = Calm • F = Fullscreen</div>
     </header>
 
