--- a/pages/stories.html
+++ b/pages/stories.html
@@ -30,7 +30,7 @@
     <p>Choose a doorway:</p>
     <ul>
       <li><a href="harbinger.html">Harbinger (Novel)</a></li>
-      <li><a href="../stories/wordless/the_dot/index.html">The Dot (Wordless Story)</a></li>
+  <li><a href="../stories/wordless/the_dot/index.html">The Dot (Intro)</a></li>
     </ul>
   </main>
 
