--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <ul>
           <li><a href="stories/wordless/the_dot/index.html">🌈 The Dot (Intro)</a></li>
           <li><a href="stories/wordless/template_storybook/index.html">📖 Template Storybook</a></li>
-          <li><a href="stories/wordless/harbinger_dawn/index.html">📖 The Harbinger – A Dawn Remembered</a></li>
+          <li><a href="stories/wordless/harbinger_dawn/index.html">📖 A Dawn Remembered</a></li>
         </ul>
       </article>
 
